[gd_scene load_steps=6 format=3 uid="uid://yp7puejkigwq"]

[ext_resource type="Script" uid="uid://b8smy87045mji" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://bmmm2ejdxk8x" path="res://Images/monster1.png" id="2_h2yge"]
[ext_resource type="Script" uid="uid://dgteubqggd72p" path="res://scripts/monster.gd" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://cfknbbx71wk8i" path="res://Images/주방.png" id="3_h2yge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(105.5, 147)

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Monster" type="Sprite2D" parent="."]
position = Vector2(421, 14)
texture = ExtResource("2_h2yge")
centered = false
script = ExtResource("3_1bvp3")

[node name="OrderLabel" type="Label" parent="Monster"]
anchors_preset = -1
anchor_left = 0.104
anchor_top = -0.18800001
anchor_right = 0.104
anchor_bottom = -0.18800001
offset_left = 252.968
offset_top = 124.496
offset_right = 446.968
offset_bottom = 192.496

[node name="DrawButton" type="Button" parent="."]
offset_left = 210.0
offset_top = 379.0
offset_right = 285.0
offset_bottom = 439.0
text = "드로우
"

[node name="PlayerHand" type="HBoxContainer" parent="."]
offset_left = 206.0
offset_top = 470.0
offset_right = 935.0
offset_bottom = 643.0

[node name="CombineButton" type="Button" parent="."]
offset_left = 194.0
offset_top = 268.0
offset_right = 295.0
offset_bottom = 342.0
text = "조합하기"

[node name="CookingArea" type="Node2D" parent="."]

[node name="IngredientSlot1" type="Area2D" parent="CookingArea"]

[node name="Background" type="ColorRect" parent="CookingArea/IngredientSlot1"]
offset_left = 406.0
offset_top = 271.0
offset_right = 512.0
offset_bottom = 417.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CookingArea/IngredientSlot1"]
position = Vector2(459.25, 344.5)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="IngredientSlot2" type="Area2D" parent="CookingArea"]

[node name="Background" type="ColorRect" parent="CookingArea/IngredientSlot2"]
offset_left = 531.0
offset_top = 272.0
offset_right = 637.0
offset_bottom = 418.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CookingArea/IngredientSlot2"]
position = Vector2(584, 345)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="IngredientSlot3" type="Area2D" parent="CookingArea"]

[node name="Background" type="ColorRect" parent="CookingArea/IngredientSlot3"]
offset_left = 654.0
offset_top = 272.0
offset_right = 760.0
offset_bottom = 418.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CookingArea/IngredientSlot3"]
position = Vector2(707, 346)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ResultLabel" type="Label" parent="."]
offset_left = 792.0
offset_top = 281.0
offset_right = 949.0
offset_bottom = 384.0
horizontal_alignment = 1

[node name="backgruond" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 324)
texture = ExtResource("3_h2yge")

[connection signal="pressed" from="DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="CombineButton" to="." method="_on_combine_button_pressed"]
